css/styles.css
body {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

h1 {
    font-size: 36px;
    font-weight: bold;
    font-family: Cambria, serif;
    text-align: center;
}

button {
    display: block; 
    margin: 10px auto;    
    font-size: 24px;
    font-weight: bold;
    font-family: Cambria, serif;
    text-align: center;
}

.hole {
    display: inline-block;    
    height: 150px; 
    width: 150px;
    margin: 10px;    
    background: brown;
    border-radius: 75px;
    vertical-align: top;
}

#board {
    display: inline-block;
    border: 5px solid black;
    background: green;
    width: 510px;
    margin: 0 auto;
}

#timer {
    float: left;
}

#score {
    float: right;
}

